@@ -2780,8 +2780,47 @@ argument_list|,
 name|shards
 argument_list|)
 expr_stmt|;
-empty_stmt|;
-comment|//        String routerName = message.getStr(OverseerCollectionProcessor.ROUTER,DocRouter.DEFAULT_NAME);
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|routerSpec
+init|=
+name|DocRouter
+operator|.
+name|getRouterSpec
+argument_list|(
+name|message
+argument_list|)
+decl_stmt|;
+name|String
+name|routerName
+init|=
+name|routerSpec
+operator|.
+name|get
+argument_list|(
+literal|"name"
+argument_list|)
+operator|==
+literal|null
+condition|?
+name|DocRouter
+operator|.
+name|DEFAULT_NAME
+else|:
+operator|(
+name|String
+operator|)
+name|routerSpec
+operator|.
+name|get
+argument_list|(
+literal|"name"
+argument_list|)
+decl_stmt|;
 name|DocRouter
 name|router
 init|=
@@ -2789,18 +2828,7 @@ name|DocRouter
 operator|.
 name|getDocRouter
 argument_list|(
-name|message
-operator|.
-name|getStr
-argument_list|(
-name|OverseerCollectionProcessor
-operator|.
-name|ROUTER
-argument_list|,
-name|DocRouter
-operator|.
-name|DEFAULT_NAME
-argument_list|)
+name|routerName
 argument_list|)
 decl_stmt|;
 name|List
@@ -3056,12 +3084,7 @@ name|DocCollection
 operator|.
 name|DOC_ROUTER
 argument_list|,
-name|DocRouter
-operator|.
-name|getRouterSpec
-argument_list|(
-name|message
-argument_list|)
+name|routerSpec
 argument_list|)
 expr_stmt|;
 name|DocCollection
